# OpenTrace

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.md  OVERVIEW.md  README.md  mlruns.db  pyproject.toml  setup.py  test.py
.github/workflows/: ci.yml  docs.yml  python-app.yml  unit-tests.yml
dev_deployment/: README.md  trace_dev_modal_image.py
docs/: _config.yml  _toc.yml  intro.md
docs-mkdocs/: README.md  gen_ref_pages.py  mkdocs.yml
docs-mkdocs/docs/: api.md  index.md  new-in-v02.md
docs-mkdocs/site/: 404.html  index.html  sitemap.xml
docs/quickstart/: installation.md  quick_start.ipynb  quick_start_2.ipynb  virtualhome.md
docs/tutorials/: error_handling_tutorial.ipynb  minibatch.ipynb  optimization_tutorial.ipynb  projections_tutorial.ipynb  trainers.ipynb
examples/: async_optimization_example.py  battleship.py  example_usage_trainer.py  greeting.py  gsm8k_search_algo.py  gsm8k_trainer_example.py  mlflow_autolog_example.py  priority_search_example.py  priority_search_on_convex_fn.py  priority_search_on_convex_fn_BENCH.py  search_algo_example.py  train_example.py  train_model.py  train_single_node.py  train_single_node_multi_optimizers.py.py  trainer_benchmark_HOWTO.md  trainers_benchmark.py  trainers_benchmark_tasks_validation.py  virtualhome.py
examples/bbh/: run_prompt_bigbench_dspy.py  run_prompt_bigbench_trace.py
examples/ifbench/: agent.py
examples/minibatch_bbh_aynsc/: run_bigbench_trace_async.py
mlruns/0/: meta.yaml
tests/: mlflow_test.py  optimizer_optorefine.ipynb  optimizer_refactor.ipynb  test_memory_leak.py
(+309 files in other folders)
