
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-opt"
authors = [
  {name = "Ching-An Cheng", email = "chinganc0@gmail.com"},
  {name = "Allen Nie", email = "aimingnie@gmail.com"},
  {name = "Adith Swaminathan", email = "adith387@gmail.com"},
]
license="MIT"
requires-python = ">= 3.9"
dynamic = ["version", "dependencies", "description"]
readme = "README.md"
keywords = ["trace", "opto", "AutoDiff"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
]

[project.optional-dependencies]
autogen = ["autogen-agentchat==0.2.40"]


[project.urls]
Homepage = "https://microsoft.github.io/Trace/"
Documentation = "https://microsoft.github.io/Trace/intro.html"
Repository = "https://github.com/microsoft/Trace.git"

[tool.setuptools]
license-files = ["LICEN[CS]E*"]